--- a/index.html
+++ b/index.html
@@ -1,84 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Grid Exercises</title>
-  <link rel="stylesheet" href="assets/css/grid.css">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/media.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/grid.css">
+	<link rel="stylesheet" href="assets/css/main.css">
+	<title>Grid Exercises</title>
 </head>
 <body>
-	<div class="container container2">
-		<head>
+	<div class="container container_general">
+		<header>
+			<div class="row row_header">
+				<div class="col-12 top_tittle">
+					<h1>Love Love Panda Desu</h1>
+					<h4>The best place for panda lovers</h4>	
+				</div>
+			</div> 			
+		</header>
+
+		<section class="first_photo">
 			<div class="row">
 				<div class="col-12 ceropadding">
-					<h1>Love Love Panda Desu</h1>
-					<h4>The best place for panda lovers</h4>
+					<img class="panda_pic_one" src="assets/img/uno.jpg">
 				</div>
-			</div> <!-- cierre primer row head -->
-		</head>
+			</div>		
+		</section>
 
-		<div class="row">
-			<div class="col-12 ceropadding">
-				<img class="panda" src="assets/img/uno.jpg" >
-			</div>
-		</div>
-
-		<section class="aboutPanda">
-			<div class="row">
-				<div class="col-12-back">
-					<div class="col-12-innerText">
-						<h4>About Pandas</h4>
-						<p>The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"), also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body.The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo. Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
-					</div>
-				</div>
-			</div>
-		</section> <!-- cierre texto central -->
-		<div class="row" >
-			<div class="col-12 ceropadding">
-				<img class="panda" src="assets/img/dos.jpg">	
-			</div>
-		</div> <!-- cierre foto 2 -->
-
-		<section>
-			<div class="row">
-
-				<div class="col-12 ceropadding"> <!-- titulo -->
-					<h2>Picture</h2>
-				</div>
-
-				<div class="col-4"> <!-- foto 1 -->
-					<img src="assets/img/a1.jpg">
-				</div>
-
-				<div class="col-2"> <!-- foto 2 -->
-					<img src="assets/img/a2.jpg">
-				</div>
-
-				<div class="col-2"> <!-- foto 3 -->
-					<img src="assets/img/a3.jpg">
-				</div>
-
-				<div class="col-4"> <!-- foto 4 -->
-					<img src="assets/img/a4.jpg">
+		<section class="about_panda">
+			<div class="row about_back">
+				<div class="col-6 about_text">
+					<h4>About Pandas</h4>
+					<p>The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"),also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo.Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
 				</div>
 			</div>
 		</section>
 
-		<div class="row"> <!-- utlima foto -->
-			<div class="col-12 ceropadding">
-				<img class="panda" src="assets/img/tres.jpg">
-			</div>
-		</div>
-
-		<footer>
+		<section class="panda_two">
 			<div class="row">
 				<div class="col-12 ceropadding">
-					<h4>Love Love Panda, Laboratoria 2017</h4>
+					<img class="panda_pic_two" src="assets/img/dos.jpg">		
+				</div>		
+			</div>
+		</section>
+
+		<section class="panda_section">
+
+			<div class="row row_color">
+				<div class="col-3">
+					<h2 class="tittle_galery">Pictures</h2>
 				</div>
 			</div>
-		</footer>
-	</div>
+				<div class="row row_little_panda">
+					<div class="col-2"></div>
+					<div class="col-2">
+						<img class="img" src="assets/img/a1.jpg">			
+					</div>
+					<div class="col-2 ">
+						<img class="img" src="assets/img/a2.jpg">
+					</div>
+					<div class="col-2">
+						<img class="img" src="assets/img/a3.jpg">		
+					</div>
+					<div class="col-2">
+						<img class="img" src="assets/img/a4.jpg">
+					</div>
+					<div class="col-2"></div>
+				</div>			
+		</section>
 
+		<section class="last_panda">
+			<div class="row">
+				<div class="col-12 ceropadding">
+					<img class="panda_pic_three" src="assets/img/tres.jpg">		
+				</div>		
+			</div>
+		</section>
+
+		<footer class="footer_panda">
+			<div class="row">
+				<div class="col-12">
+					<h5 class="tittle_footer">Love Love Panda - Laboratoria 2017</h5>		
+				</div>
+			</div>		
+		</footer>
+		</div>
+</body>
 </html>
